# GRETEL

./: .gitignore  LICENSE  README.md  clear-qsub-subfolds.sh  countergan-qsub-subfolds.sh  dataset_stats.py  datasetinspection.py  docker-compose.yml  dockerfile  env_gpu_install.sh  env_install.sh  experiments.sh  generate_datasets.py  glaunch.sh  gmulti.sh  hyperparams_opt_main.py  hyperparams_optimization.sh  hypop_cf2.py  hypop_cf2.sh  hypop_clear.py  hypop_clear.sh  hypop_countergan.py  hypop_countergan.sh  hypop_gcountergan.py  hypop_gcountergan.sh  import-cf-gnnexplainer-dataset.py  launch.sh  local_main.py  main.py  makefile  multi copy.sh  multi.sh  pyproject.toml  requirements.txt  result_stats.py  std.py  test.txt  trash.json  trash_1.json  trashtest.ipynb  (+1 more)
.devcontainer/: devcontainer.json  docker-compose.yml
ancillary_scripts/: add_value_to_explainer_name.py  copy_and_rename_results.py
config/: ADHD+SVM+Graph2Vec_DCE.jsonc  ADHD+SVM+Graph2Vec_DCES.jsonc  ASD+ASD_Custom+DCES.jsonc  ASD+ASD_Custom+DDBS.jsonc  ASD+ASD_Custom+EnsembleTS.jsonc  ASD+ASD_Custom+OBS.jsonc  ASD+DCE_DM.jsonc  ASD+GCN_DCERank.jsonc  ASD+SVM+Graph2Vec_DCE.jsonc  ASD+SVM+Graph2Vec_DCES.jsonc  ASD+SVM+Graph2Vec_EnsembleTS.jsonc  ASD+TCR+BBBP_GCN_DCE.jsonc  ASDASD_CustomEnsembleTS.jsonc  BBBP+GCN+DCES.jsonc  BBBP+GCN+MACCS.json  BBBP_GCN_DCE.json  BBBP_KNN-MOL_DCE.json  BBBP_SVM-MOL_DCE.json  TCR-1000-5k-0.3_GCN_RSGG.jsonc  TCR-128-32-0.2_GCN_RSGG.jsonc  TCR-128-32-0.2_KNN-G2V_DCE.jsonc  TCR-128-32-0.2_SVM-G2V_DCE.jsonc  TCR-150-100-0.3+TCC+iRand.jsonc  TCR-150-100-0.3+TCC+pRand.jsonc  (+6 more)
(+5239 files in other folders)
