[tool.poetry]
name = "gretel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.7.1 <3.11"
exmol = "2.1.1"
gensim = "4.2.0"
joblib = "1.2.0"
jsonpickle = "2.2.0"
karateclub = "1.3.2"
matplotlib = "3.5.3"
networkx = "2.6.3"
numpy = "1.21.6"
pandas = "1.3.5"
rdkit = "2022.3.5"
scikit-learn = "1.0.2"
scipy = "1.7.3"
selfies = "2.1.1"
sqlalchemy = "1.4.41"
black = "22.8.0"
typing-extensions = "4.3.0"

[tool.poetry.group.dev.dependencies]
exmol = "2.1.1"
gensim = "4.2.0"
joblib = "1.2.0"
jsonpickle = "2.2.0"
karateclub = "1.3.2"
matplotlib = "3.5.3"
networkx = "2.6.3"
numpy = "1.21.6"
pandas = "1.3.5"
rdkit = "2022.3.5"
scikit-learn = "1.0.2"
scipy = "1.7.3"
selfies = "2.1.1"
sqlalchemy = "1.4.41"
black = "22.8.0"
typing-extensions = "4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
